# Space-AI-SDA-System

./: .coverage  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEVLOG.md  Dockerfile  Makefile  PHASE1_TESTING_COMPLETE.txt  PHASE_ROADMAP.md  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements-dev.txt  requirements-docker.txt  requirements.txt
.github/workflows/: ci.yml
checkpoints/collision_predictor/: best_model.pt
checkpoints/phase3_anomaly/: anomaly_meta.json  (+3 more)
config/: api.yaml  ml_models.yaml  simulation.yaml  tracking.yaml
data/: assessments_snapshot.json
docs/: ANOMALY_DETECTION.md  INTENT_CLASSIFICATION.md  NOTEBOOK_GUIDE.md  PHASE0_COMPLETE.md  PHASE1_COMPLETE.md  PHASE1_PROGRESS.md  PHASE1_TEST_REPORT.md  PHASE2_PLAN.md  PHASE2_PROGRESS.md  PHASE3_COMPLETE.md  PHASE3_PARALLEL_HEAD.md  PHASE3_PROGRESS.md  PHASE3_RECOVERY_STATUS.md  PHASE5_COMPLETE.md  TESTING_WORKFLOW.md  THREAT_SCORING.md
notebooks/: 01_data_exploration.ipynb
scripts/: build_mixed_catalog.py  build_notebook.py  download_tle_data.py  evaluate_ml_comparison.py  evaluate_tracking.py  export_snapshot.py  extract_features_1k_chunked.py  generate_dataset.py  generate_model_showcase.py  retrain_maneuver_classifier.py  run_dashboard.py  run_e2e_validation.py  run_phase0_tests.sh  run_tracker.py  setup_environment.sh  train_anomaly_autoencoder.py  train_collision_predictor.py  train_trajectory_parallel.py  train_trajectory_scaled.py  validate_full_assessment.py  validate_simulation.py  verify_setup.py
src/: __init__.py
tests/: __init__.py
(+135 files in other folders)
